--- a/BrokerSystem.Api/appsettings.json
+++ b/BrokerSystem.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=ROBS\\SQLEXPRESS;Initial Catalog=BrokerSystemDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "AllowedHosts": "*"
 }
