--- a/BrokerSystem.UI/package.json
+++ b/BrokerSystem.UI/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "^8.3.13",
     "@mantine/hooks": "^8.3.13",
+    "@mantine/notifications": "^8.3.13",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.3",
     "lucide-react": "^0.563.0",
