--- a/BrokerSystem.UI/package.json
+++ b/BrokerSystem.UI/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@mantine/core": "^8.3.13",
+    "@mantine/dates": "^8.3.13",
+    "@mantine/form": "^8.3.13",
     "@mantine/hooks": "^8.3.13",
     "@mantine/notifications": "^8.3.13",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.3",
+    "dayjs": "^1.11.19",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
